@@ -1,3 +1,7 @@
+2011-01-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added utility method for XML to PHP array conversion, resolves #11794
+
 2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added a post-processing method to the API
